Fix line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ nav {
 .comments p {
 	font-size: 1rem;
 	width: 60%;
+	line-height: 21px;
 }
 
 .comments button {
